--- a/src/styles/burger.css
+++ b/src/styles/burger.css
@@ -1,5 +1,5 @@
 .burger-shop {
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   background-color: #F5F8FC;
@@ -7,21 +7,6 @@
 
 .burger-shop nav h1{
   font-size: 1.17em;
-}
-
-.burger-shop section {
-  display: flex;
-  padding: 0px 5px 0px 5px;
-}
-
-.burger-shop ul {
-  width: 100%;
-  padding: 10px;
-  border-radius: 8px;
-  background: #fbfcfd;
-  margin: 15px 7.5px 10px 7.5px;
-  border: 1px solid rgb(225, 225, 225);
-  box-shadow: 0px 5px 5px -1px rgba(2,15,46,0.18);
 }
 
 ul div {
@@ -78,4 +63,21 @@ li button {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+
+.burger-shop section {
+  display: flex;
+  padding: 0px 5px 0px 5px;
+  height: 1000px;
+}
+
+.burger-shop section ul {
+  width: 100%;
+  padding: 10px;
+  border-radius: 8px;
+  background: #fbfcfd;
+  margin: 15px 7.5px 10px 7.5px;
+  border: 1px solid rgb(225, 225, 225);
+  box-shadow: 0px 5px 5px -1px rgba(2, 15, 46, 0.18);
 }
